scratch/cert-manager-manual/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: example-app
spec:
  tls:
    - hosts:
        - umer-cluster2.aurin-prod.cloud.edu.au
      secretName: example-app-tls
  rules:
    - host: umer-cluster2.aurin-prod.cloud.edu.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-service
                port:
                  number: 80
